# Sauce-Bot-LINE

./: .gitignore  README.md  commentpy.py  keep_alive.py  kunci.json  main.py  nHentaiTagBot.py  pyproject.toml  requirements.txt  sauce.py  setup.py  temp  tes2.py  test.py  testing.py  trace.py
Roboragi/: AnimeBot.py  AnimePlanet.py  CommentBuilder.py  Search.py  VNDB.py  patterns.py
handlers/: dbhandler.py  firebase.py  handler.py  handlers.py  httpapi.py  lineHandler.py  line_db.json  logger.py  model.py  proxyhandler.py  reqeuesthandler.py  retry.py  strings.py  trace.py
handlers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
handlers/Roboragi/: AnimeBot.py  CommentBuilder.py  Kitsu.py  NU.py  Search.py  VNDB.py  patterns.py
handlers/hsauce/: comment_builder.py  get_source.py
handlers/nHentaiTagBot/: ehentai.py  hitomila.py  nHentaiTagBot.py  nhentai.py  tsumino.py
handlers/sauce/: comment_builder.py  get_source.py  trace.py
hsauce/: .gitmodules  README.md  comment_builder.py  get_source.py
hsauce_bot-master/: comment_builder.py  get_source.py  saucenao_bot_agent.py
nHentaiTagBot/: commentpy.py  ehentai.py  hitomila.py  nHentaiTagBot.py  nhentai.py  tsumino.py
templates/: upload.html
